--- a/index.html
+++ b/index.html
@@ -28,9 +28,9 @@
 
         <div class="task-List">
             <ul v-if="tasklist.length > 0">
-                <li v-for="task in tasklist">
+                <li v-for="(task, index) in tasklist">
                     <span class="tast-text">{{task.text}}</span>
-                    <i class="fa-solid fa-xmark"></i>
+                    <i @click="remuveTask(index)" class="fa-solid fa-xmark"></i>
                 </li>
             </ul>
             <h3 v-else>sei libero!</h3>
